# Solver

./: CMakeLists.txt  Makefile  README.md  main.cpp
data/: mapa15_5.txt  mapa3_11.txt  mapa3_3.txt  mapa3_5.txt  mapa4_15.txt  mapa5_11.txt  mapa5_15.txt  mapa5_5.txt  mapa7_10.txt  mapa7_11.txt  mapa7_7.txt  mapa9_9.txt
data/timing_tests/: 10a.txt  10b.txt  11a.txt  11b.txt  12a.txt  12b.txt  13a.txt  13b.txt  14a.txt  14b.txt  15a.txt  15b.txt  16a.txt  16b.txt  17a.txt  17b.txt  18a.txt  18b.txt  19a.txt  19b.txt  20a.txt  20b.txt  3a.txt  3b.txt  4a.txt  4b.txt  5a.txt  5b.txt  6a.txt  6b.txt  7a.txt  7b.txt  8a.txt  8b.txt  9a.txt  9b.txt
include/: Board.h  BoardFilling.h  BoardReader.h  BoardState.h  Constants.h  Coords.h  PiecePlacement.h  PosedQuatromin.h  Quatromin.h  SQMSolution.h
include/Solvers/: SQMSolver.h  SQMSolverDataParallel.h  SQMSolverMPI.h  SQMSolverSeq.h  SQMSolverTaskParallel.h
src/: Board.cpp  BoardFilling.cpp  BoardReader.cpp  BoardState.cpp  Coords.cpp  PiecePlacement.cpp  PosedQuatromin.cpp  Quatromin.cpp  SQMSolution.cpp
src/Solvers/: SQMSolver.cpp  SQMSolverDataParallel.cpp  SQMSolverMPI.cpp  SQMSolverSeq.cpp  SQMSolverTaskParallel.cpp
tests/: CLITester.cpp  SolverBenchmark.py  SolverTester.cpp
